// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_storage_types.sources.load_generator;

import "google/protobuf/empty.proto";

// NOTE: this message is encoded and stored as part of source export
// statement options
// Be extra careful about changes, ensuring that all changes are backwards
// compatible
message ProtoLoadGeneratorSourceExportStatementDetails {
  ProtoLoadGeneratorOutput output = 1;
}

message ProtoLoadGeneratorOutput {
  oneof kind {
    google.protobuf.Empty default = 1;
    ProtoLoadGeneratorAuctionOutput auction = 2;
    ProtoLoadGeneratorMarketingOutput marketing = 3;
    ProtoLoadGeneratorTpchOutput tpch = 4;
  }
}

enum ProtoLoadGeneratorAuctionOutput {
  Organizations = 0;
  Users = 1;
  Accounts = 2;
  Auctions = 3;
  Bids = 4;
}

enum ProtoLoadGeneratorMarketingOutput {
  Customers = 0;
  Impressions = 1;
  Clicks = 2;
  Leads = 3;
  Coupons = 4;
  ConversionPredictions = 5;
}

enum ProtoLoadGeneratorTpchOutput {
  Supplier = 0;
  Part = 1;
  Partsupp = 2;
  Customer = 3;
  Orders = 4;
  Lineitem = 5;
  Nation = 6;
  Region = 7;
}
